// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Page /> renders correctly 1`] = `
<div
  className="Page "
>
  <Helmet>
    <title>
      header
    </title>
    <body
      className=""
    />
  </Helmet>
  <Container
    fluid={true}
  >
    <Header
      as="h1"
    >
      <HeaderContent>
        header
        <HeaderSubheader>
          subheader
        </HeaderSubheader>
      </HeaderContent>
    </Header>
    <p>
      Hello, World!
    </p>
  </Container>
</div>
`;

exports[`<Page /> renders correctly with a CSS class 1`] = `
<div
  className="Page className"
>
  <Helmet>
    <title>
      header
    </title>
    <body
      className=""
    />
  </Helmet>
  <Container
    fluid={true}
  >
    <Header
      as="h1"
    >
      <HeaderContent>
        header
        <HeaderSubheader>
          subheader
        </HeaderSubheader>
      </HeaderContent>
    </Header>
    <p>
      Hello, World!
    </p>
  </Container>
</div>
`;
